feat: 2단계 QueryBuilder DDL 미션 수행 (#153)
* fix: code-review 반영

- jdk 11
- lombok 라이브러리 의존 제거
- 단위테스트에 단 하나의 assertion 규칙 반영

Co-authored-by: Shinyoung Kim <rolroralra@gmail.com>

* feat: QueryBuilder 초안 구현

- 테스트 코드 작성
- QueryBuilder 에 필요한 기본 메서드 작성
  - 바로 구현 가능할 경우, 바로 구현
  - 일부는 미구현

* feat: 요구사항 1 - 아래 정보를 바탕으로 create 쿼리 만들어보기

- @Entity
- @Id
- Class Field

Co-authored-by: Shinyoung Kim <rolroralra@gmail.com>

* feat: 요구사항 2 - 추가된 정보를 통해 create 쿼리 만들어보기

- @GeneratedValue
- @Column

Co-authored-by: Shinyoung Kim <rolroralra@gmail.com>

* feat: 요구사항 3 - 추가된 정보를 통해 create 쿼리 만들어보기2

- @Table
- @Transient

Co-authored-by: Shinyoung Kim <rolroralra@gmail.com>

* feat: 요구사항 4 - 정보를 바탕으로 drop 쿼리 만들어보기

- @Table.schema

Co-authored-by: Shinyoung Kim <rolroralra@gmail.com>

* feat: JdbcTemplate 을 통해 Application main 메서드에서 실행 테스트

* fix: code review 반영

- logging 메서드 modifier 변경
  - protected static -> private
- @DisplayName 기재 (테스트 코드 가독성 고려)
- QueryBuilder 구현체 테스트 코드에서 추상화 타입으로 인터페이스화
- 아래 객체지향 규칙 반영
  - 규칙 1: 한 메서드에 오직 한 단계의 들여쓰기(indent)만 한다.
  - 규칙 2: else 예약어를 쓰지 않는다.
- 컬럼의 여러 제약조건들을 인터페이스로 추상화 해서 적용
  - ConstraintsStrategy 적용
- DataTypeBuilder 적용

Co-authored-by: Shinyoung Kim <rolroralra@gmail.com>

* style: package 구조 일부 수정

- persistence.sql.ddl
  - strategy
  - builder

Co-authored-by: Shinyoung Kim <rolroralra@gmail.com>

* feat: code review 반영

- QueryBuilder 구현체 통합
- 내부에서만 사용되는 메서드 `private`로 변경
- CamelCaseToSnakeCaseConverter 삭제
- 매직넘버 상수화
- 인터페이스 default 메서드 남용 제거
- dependency injection 을 위한 생성자 추가

---------

Co-authored-by: socar-shinyoung <shinyoung@socar.kr>